# corgo-bot

./: Dockerfile  README.md  package.json
.github/workflows/: deploy-bot-js.yml  deploy-bot-rust.yml  do-deploy.yml
js-bot/: Dockerfile  index.js  package.json
rust-bot/: Cargo.toml  Dockerfile  welcome_messages.json  welcome_messages_.json
rust-bot/src/: main.rs  welcome_message.rs
rust-bot/src/commands/: mod.rs  mod_group.rs
