[package]
name = "corgo-rust"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "^0.8"
tracing-honeycomb = "0.1.0"
libhoney-rust = "^0.1.3"
tracing-subscriber = "0.2.11"
tracing = "0.1.19"
