[package]
name = "corgo-rust"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.10"
tracing-subscriber = { version = "0.3.9", features = ["json"] }
tracing = "0.1.31"
tokio = { version = "1.17.0", features = ["full"] }
